--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,13 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports:
+    dplyr,
+    magrittr,
+    readr,
+    rgl,
+    tibble,
+    tidyr
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
