--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,17 +4,20 @@ Version: 0.0.0.9000
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.3.2)
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports:
     dplyr,
+    glue,
     magrittr,
+    purrr,
     readr,
     rgl,
     tibble,
-    tidyr
+    tidyr,
+    snow
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
