Creating the ucharHelp function to extract properties and gather them as dataframe. Deals with "uchar" format, for vectors or tensors. Updating read_cellGraph_function and read_ply_function, which both use the ucharHelp function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(mesh3D2ply_clust)
 export(modified_read.cellGraph)
 export(modified_read.ply)
+export(ucharHelp)
 import(dplyr)
 importFrom(grDevices,rgb)
 importFrom(magrittr,"%>%")
