Adding Sébastien to the authors list.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: mgx2r
 Title: Import mesh and cell graph files from MorphoGraphX software
 Version: 0.0.0.9000
-Authors@R: person("Marion", "Louveaux", email = "marion.louveaux@gmail.com", role = c("aut", "cre"))
+Authors@R: c(person("Marion", "Louveaux", email = "marion.louveaux@gmail.com", role = c("aut", "cre")),
+    person("Sébastien", "Rochette", email = "sebastien@thinkr.fr", role = c("aut")) )
 Description: Import mesh and cell graph files from MorphoGraphX software as tidy dataframes.
-  Propose visualization solutions for mesh and cell graph files from MorphoGraphX with Plotly and Shiny.
+    Propose visualization solutions for mesh and cell graph files from MorphoGraphX with Plotly and Shiny.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
