--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports:
+Imports: 
     colorRamps,
     dplyr,
     glue,
@@ -19,10 +19,10 @@ Imports:
     rgl,
     tibble,
     tidyr,
-    snow
+    snow,
+    plotly
 Suggests: 
     knitr,
-    plotly,
     rmarkdown,
     RColorBrewer,
     testthat
