Updating namespace and vignette (changes in package and function names).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,11 @@
 
 export("%>%")
 export(find_coords)
-export(mesh3D2ply_clust)
-export(modified_read.cellGraph)
-export(modified_read.ply)
+export(mesh2ply)
 export(plotlyMesh)
+export(plotlyMesh_all)
+export(read_mgxCellGraph)
+export(read_mgxPly)
 export(show_cellcontour)
 export(show_tensors)
 export(ucharHelp)
