Add appveyor and badges
Add cellviz3d in suggests
 Changes to be committed:
	modified:   .Rbuildignore
	modified:   .travis.yml
	modified:   DESCRIPTION
	modified:   README.Rmd
	modified:   README.md
	new file:   appveyor.yml
	modified:   vignettes/vignette_basics.Rmd
	modified:   vignettes/vignette_time_series.Rmd

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 
 r_github_packages:
   - marionlouveaux/mgx2r  # pre-install to avoid vignette package errors
+  - marionlouveaux/cellviz3d
 
 after_success:
   - Rscript -e 'pkgdown::build_site()'
